# MithRust

./: .gitignore  Cargo.toml  build.rs  sqlx-data.json
.github/workflows/: rust.yml
proto/mith/v1/: auth.proto
src/: database.rs  error.rs  lib.rs  main.rs  util.rs
