[package]
name = "mith"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
log = "0.4"
hex = "0.4.3"
serde = "1.0"
prost = "0.11"
chrono = "0.4"
argon2 = "0.4.1"
config = "0.13.2"
serde_json = "1.0"
mimalloc = "0.1.29"
tonic = { version = "0.8", features = ["tls"] }
moka = { version = "0.9", features = ["future"] }
fern = { version = "0.6", features = ["colored"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
tokio = { version = "1.2", features = ["macros", "rt-multi-thread", "signal"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "uuid", "offline" ] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "mith"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.8"
